<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.annadaletech.clojure</groupId>
    <artifactId>clojure-osgi-utils</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <name>clojure-osgi-utils</name>
    <description>OSGi utilities for Clojure</description>
    <packaging>jar</packaging>

    <scm>
        <connection>scm:git:https://repository.annadaletech.com/git/clojure-osgi-utils.git</connection>
        <!--<url>http://fisheye.annadaletech.com/browse/Nexus</url>-->
    </scm>

    <distributionManagement>
        <repository>
            <id>annadale-repository</id>
            <name>Annadale Tech Repository</name>
            <url>scpexe://s2/var/www/localhost/htdocs/maven2</url>
        </repository>
    </distributionManagement>

    <build>
		<resources>
			<resource>
				<directory>src/main/clojure</directory>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/clojure</directory>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.4.2</version>
                <executions>
                    <execution>
                        <id>create-manifest</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/META-INF</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${basedir}/src/main/resources/META-INF</directory>
                                    <filtering>true</filtering>
                                    <includes>
                                        <include>MANIFEST.MF</include>
                                    </includes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.3.1</version>
                <configuration>
                    <archive>
                        <manifestFile>${project.build.directory}/META-INF/MANIFEST.MF</manifestFile>
                    </archive>
                    <includes>
                        <include>com/annadaletech/**/*.*</include>
                        <include>**/*.properties</include>
                    </includes>
					<excludes>
						<exclude>**/*.clj</exclude>
					</excludes>
				</configuration>
                <executions>
                    <execution>
                        <id>create-lib</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                            <finalName>${project.artifactId}</finalName>
                        </configuration>
                    </execution>
                </executions>
			</plugin>
			<plugin>
				<groupId>com.theoryinpractise</groupId>
				<artifactId>clojure-maven-plugin</artifactId>
				<version>1.3.8</version>
<!--
                <configuration>
                    <clojureOptions>-Xms512m -Xmx512m -XX:MaxPermSize=128M</clojureOptions>
                    <warnOnReflection>true</warnOnReflection>
                </configuration>
-->
                <executions>
                    <execution>
                        <id>test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>test-with-junit</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.annadaletech.clojure</groupId>
            <artifactId>clojure</artifactId>
            <version>1.3.0</version>
        </dependency>
        <dependency>
            <groupId>com.annadaletech.clojure</groupId>
            <artifactId>tools.namespace</artifactId>
            <version>0.1.1</version>
        </dependency>
    </dependencies>

</project>